--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 </head>
 
 <body>
-    <h1>Sales Report</h1>
-    <script>
+    <div id="app">
 
+    </div>
+    <script>
+        new Vue({
+            el: '#app',
+            data: {
+                title: 'Sales Report',
+                sales: null
+            },
+            methods: {
+                getSales(){
+                    fetch('/data/sales.json')
+                        .then(resp => resp.json())
+                        .then(data => this.sales = data)
+                }
+            },
+            mounted() {
+                this.getSales();
+            }
+
+        })
     </script>
 </body>
 
