--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 
 <body>
     <div id="app">
+        <div class="container">
+            <h1 class="mt-3">{{ title }}</h1>
 
+            <table class="mt-5 table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Qtd</th>
+                    <th>Data</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr></tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <script>
         new Vue({
