Creating directive for money mask

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <tr v-for="sale in sales">
                         <td>{{ sale.id }}</td>
                         <td>{{ sale.name }}</td>
-                        <td>{{ sale.price }}</td>
+                        <td v-money="'$'">{{ sale.price }}</td>
                         <td>{{ sale.qtde }}</td>
                         <td>{{ sale.date }}</td>
                     </tr>
@@ -36,6 +36,13 @@
         </div>
     </div>
     <script>
+        Vue.directive('money', {
+            inserted(el, binding){
+                const amount = parseFloat(el.innerHTML).toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,');
+                el.innerHTML = `${binding.value} ${amount}`;
+            }
+        });
+
         new Vue({
             el: '#app',
             data: {
