--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div id="app">
         <div class="container">
             <h1 class="mt-3">{{ title }}</h1>
-
-            <table class="mt-5 table">
+            <table class="mt-5 table" v-if="!showTotal">
                 <thead>
                 <tr>
                     <th>ID</th>
@@ -33,6 +32,30 @@
                     </tr>
                 </tbody>
             </table>
+
+            <table class="mt-5 table" v-if="showTotal">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="(sale, index) in salesByProduct">
+                        <td>#{{ index + 1 }}</td>
+                        <td>{{ sale.name }}</td>
+                        <td v-money="'$'">{{ sale.value }}</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>+</td>
+                        <td>Total</td>
+                        <td v-money="'$'">{{ calculateTotal(salesByProduct) }}</td>
+                    </tr>
+                </tfoot>
+            </table>
         </div>
     </div>
     <script>
@@ -47,13 +70,36 @@
             el: '#app',
             data: {
                 title: 'Sales Report',
-                sales: null
+                sales: null,
+                showTotal: false
+            },
+            computed: {
+                salesByProduct(){
+                    if(!this.sales) return null;
+
+                    const salesByProduct = this.sales.reduce((grouped, sale) => {
+                        if(!grouped.hasOwnProperty(sale.name)){
+                            grouped[sale.name] = {
+                                name: sale.name,
+                                value: sale.price * sale.qtde
+                            };
+                        } else {
+                            grouped[sale.name].value += (sale.price * sale.qtde);
+                        }
+                        return grouped;
+                    }, {});
+
+                    return Object.values(salesByProduct);
+                },
             },
             methods: {
                 getSales(){
                     fetch('/data/sales.json')
                         .then(resp => resp.json())
                         .then(data => this.sales = data)
+                },
+                calculateTotal(sales){
+                    return sales ? sales.reduce((total, sale) => total+sale.value, 0): 0;
                 }
             },
             mounted() {
